--- a/Firefox/popup/lookup.css
+++ b/Firefox/popup/lookup.css
@@ -27,6 +27,10 @@ span {
   font-weight: bold;
 }
 
+#source {
+  font-size: 0.6em;
+}
+
 /* Spinner source: http://tobiasahlin.com/spinkit/ */
 #spinner {
   margin: 10px auto;
